--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -1,87 +1,99 @@
 *{
     margin: 0px;
     padding: 0px;
+    font-family: 'Open Sans', sans-serif;
 }
 .body{
     height: 100vh;
     width: 100%;
     /* border: 2px solid red; */
     display: flex;
+    transition: background-color 0.5s ease-in-out,
+     background-image 0.5s ease-in-out;
     /* justify-content: center;
-    align-items: center;
-    flex-direction: row; */
+    align-items: center; */
+    flex-direction: column;
 }
+
 .navbar{
-    height: 100%;
-    width: 25%;
-    /* border: 2px solid black; */
-    /* background-color:grey;
-     */
-     background: linear-gradient(135deg, #1e3c72, #2a5298);
+    height: 20%;
+    width: 100%;
+     background-color: white;
+     overflow-y: hidden;
+
+     overflow: hidden;
+     white-space: nowrap;
+     scrollbar-width: none;
+     /* max-height: 20%; */
 }
+
 .content{
     height: 100%;
     width: 75%;
-    /* border: 2px solid black; */
-}
-.logo{
-    height: 15%;
-    width: 100%;
-    margin-left: 10px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.homelogo{
-    margin-right: 20px;
-    cursor: pointer;
-}
-.title{
-
-    font-size: 30px;
-    color: white;
-    font-weight: 400;
-}
-.navbody{
-    height: 60%;
-    width: 100%;
-    /* border: 2px solid green; */
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-}
-.navcard{
-    height: 15%;
-    width: 90%;
-    border-radius: 20px;
-    /* border: 2px solid red; */
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 160%;
-    color: white;
+}
+.logo{
+    height: 40%;
+    width: 100%;
+    padding-left: 4%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.logo1{
+    display: flex;
+    align-items: center;
+}
+.homelogo{
+    padding-right: 10%;
     cursor: pointer;
+}
+.title{
+    font-size: 120%;
+    color: grey;
+    font-weight: bold;
+    margin-left: 4%;
+}
+.navbody{
+    display: flex;
+    gap: 5%;
+    overflow-x: auto;
+    /* border: 2px solid red; */
+    margin-left: 3%;
+    margin-top: 1%;
+    height: 30%;
+    row-gap: 10%;
+}
+.navcard{
+    font-size: 100%;
+    color: rgb(85, 81, 81);
+    padding: 0px 20px;
+    border-radius: 20px;
+    /* border: 2px solid red; */
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
 }
 .navcard hr{
     margin-top: 10px;
     border: none;
-    width: 30%;
-    height: 3px;
+    width: 90%;
+    height: 5%;
     border-radius: 10px;
     background: #ff4141;
 }
 .navcard:hover{
-    background-color: rgb(238, 69, 69);
-    text-decoration: underline;
+    background-color: #ff4141;
+    transform: scale(1.0);
+    color: white;
 }
 
 .btitle{
     background: linear-gradient(135deg, #ff7eb3, #ff758c);
   color: white;
-  margin-top: 10px;
-  padding: 15px 15px;
+  margin-top: 1%;
   border-radius: 10px;
   display: flex;
   justify-content: center;
@@ -90,161 +102,94 @@
   font-weight: bold;
   text-align: center;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+  width: 50%;
 }
 .mainbody{
     /* border: 2px solid green; */
+    /* margin-left: 22%; */
     height: 90%;
-    width: 100%;
+    width: 110%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 .imgcard{
-    height: 90%;
-    width: 60%;
-    margin-left: 200px;
+    height: 80%;
+    width: 50%;
+    margin-left: 18%;
     border-radius: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
     transition: all 0.3s ease-in-out;
     transform: translateY(-5px);
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    justify-content: end;
+    align-items:end;
+    /* margin-bottom: 40px; */
     flex-direction: column;
 }
 .btns{
-    height: 30%;
+    height: 300px;
     width: 5%;
-    margin-right: 20px;
     display: flex;
+    justify-content: space-around;
+    /* align-items: center; */
     flex-direction: column;
-    justify-content: space-between;
-    gap: 10px;
+    gap: 10%;
+    /* border: 2px solid green; */
+   
 }
 .btns button{
-    border-radius: 20px;
+    border-radius:20px ;
     background-color: white;
     border: none;
-    height: 45%;
-    width: 100%;
+    height: 50px;
+    width: 50px;
+    /* border: 2px solid red; */
 }
 .imgtitle{
     height: 10%;
     width: 100%;
 }
-.imgtitle h1{
-    font-size: 200%;
-    font-weight: bold;
-    text-align: center;
-    color: #333;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    margin-bottom: 20px;
-}
-.image1{
-    height: 70%;
-    width: 90%;
-    border-radius: 20px;
-}
-.image1 img{
-    height: 100%;
-    width: 100%;
-    border-radius: 20px;
-}
-.imgdescription p{
-    font-size: 16px;
-    color: #444;
-    font-style: italic;
-    text-align: center;
-    padding: 10px;
-    background: #f8f9fa;
-    border-radius: 8px;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
-    max-width: 80%;
-    margin: 10px auto;
 
+.imgdescription p{
+    font-size: 110%;
+    text-align: left;
+    font-weight: 600;
+    max-width: 80%;
+    margin-left: 10px;
+  color: white;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+  margin-bottom: 20px;
+  padding: 10px ;
 }
 
 @media (max-width: 768px) {
-    .body{
-        height: 100vh;
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-    }
-    .navbar{
-        margin: 0px;
-        padding: 0px;
-        height: 20%;
-        width: 100%;
-    }
-    .navbody{
-        display: flex;
-        flex-direction: row;
-    }
-    .navcard{
-        height: 45%;
-        width: 90%;
-        margin-top: 15px;
-        font-size: 120%;
-    }
-    .navcard:hover{
-        text-decoration: underline;
-    }
-    .logo{
-        height: 10%;
-        width: 100%;
-        margin-top: 20px;
-    }
-    .btitle{
-       
-      width: 100%;
-      padding: 10px 10px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 150%;
-      margin-left: 40px;
-      font-weight: bold;
-      text-align: center;
-      box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
-    }
     .mainbody{
+        /* border: 2px solid green; */
+        /* margin-left: 12%; */
         height: 90%;
-        width: 100%;
+        width: 200%;
         display: flex;
+        justify-content: space-evenly;
+        align-items: center;
         flex-direction: column;
     }
     .btns{
-        height: 30%;
-        width: 60%;
-        margin-left: 130px;
+        height: auto;
+        width: 40%;
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: center;
-    }
-    .btns button{
-        height: 50%;
-        border-radius: 20px;
-        background-color: white;
-        border: none;
-        
-    }
-
-    .imgcard{
-        height: 140%;
-        width: 120%;
-        margin-left: 100px;
-        margin-top: 20px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
         flex-direction: column;
+        justify-content: space-between;
+        flex-direction: row;
+        gap: 20px;
+        /* border: 2px solid green; */
+       margin-left: 15%;
+     }
+    .imgcard{
+        width: 55%;
+    } 
+    .btitle{
+        width:60%;
+        margin-left: 25%; 
     }
-    .imgtitle h1{
-        font-size: 150%;
-       
-    }
-
 }
