--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -98,6 +98,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  /* flex-wrap: wrap; */
   font-size: 180%;
   font-weight: bold;
   text-align: center;
@@ -179,7 +180,7 @@
     .mainbody{
         /* border: 2px solid green; */
         /* margin-left: 12%; */
-        height: 90%;
+        height: 80%;
         width: 200%;
         display: flex;
         justify-content: center;
@@ -200,17 +201,21 @@
      }
     .imgcard{
         width: 55%;
-        height: 60% ;
+        height: 70% ;
     } 
     .btitle{
         width:60%;
         margin-top: 0%;
-        height: 3% ;
+        /* height: 5% ; */
         margin-left: 25%; 
         font-size: 150%;
-  font-weight: 400;
-  text-align: center;
-  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
-  width: 50%;
+        font-weight: 400;
+        text-align: center;
+        box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.2);
+        width: 50%;
+        height: 20px;
+        padding: 10px;
+
+  
     }
 }
