--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -36,7 +36,7 @@
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    border-bottom: 1px solid rgb(158, 156, 156);
+    /* border-bottom: 1px solid rgb(158, 156, 156); */
 }
 
 .content{
