--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -14,7 +14,7 @@
     flex-direction: column;
 }
 
-.navbar{
+/* .navbar{
     height: 10%;
     width: 100%;
      background-color: white;
@@ -26,17 +26,17 @@
      display: flex;
      align-items: center;
      
-}
-.navbar::-webkit-scrollbar {
+} */
+/* .navbar::-webkit-scrollbar {
     display: none;
-  }
+  } */
 .navbody1{
     height: 10%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     flex-direction: row;
-    /* border-bottom: 1px solid rgb(158, 156, 156); */
+    border-bottom: 1px solid rgb(158, 156, 156);
 }
 
 .content{
@@ -166,15 +166,38 @@
    
 }
 .btns button{
-    border-radius:20px ;
-    background-color: white;
+    border-radius: 50%;
+    color: white;
     border: none;
+    font-size: 24px;
     height: 50px;
     width: 50px;
     display: flex;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
     align-items: center;
     justify-content: center;
+    transform: translateY(-50%);
     /* border: 2px solid red; */
+
+    
+    /* border: none;
+    color: white;
+    
+    padding: 10px 16px;
+   
+    cursor: pointer;
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    
+    position: absolute;
+    right: 20px;
+    top: 50%;
+     */
+}
+
+.btns button:hover{
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+    transform: translateY(-50%) scale(1.1);
 }
 .imgtitle{
     height: 10%;
@@ -227,13 +250,13 @@
     }
     .mainbody{
         /* border: 2px solid black; */
-        /* margin-left: 12%; */
+        margin-top: 12%;
         height: 98%;
         width: 100%;
         display: flex;
         justify-content: center;
         gap: 5%;
-        align-items: center;
+        align-items:flex-start;
         /* flex-direction: column; */
     }
     .btns{
@@ -241,27 +264,31 @@
         width: 40%;
         display: flex;
         flex-direction: column;
+        margin-top: 40%;
         justify-content: space-between;
-        gap: 20px;
+        gap: 30px;
         /* border: 2px solid green; */
        /* margin-left: 15%; */
      }
-    .imgcard{
-        width: 140%;
-        height: 70% ;
-        margin-left: 10%;
-    } 
-    .btns button{
-        border-radius:20px ;
-        background-color: white;
+   
+     .btns button{
+        border-radius: 50%;
+        color: white;
         border: none;
-        height: 35px;
-        width: 35px;
+        font-size: 24px;
+        height: 40px;
+        width: 40px;
         display: flex;
+        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
         align-items: center;
         justify-content: center;
-        /* border: 2px solid red; */
-    }
+        transform: translateY(-50%);
+     }
+    .imgcard{
+        width: 140%;
+        height: 80% ;
+        margin-left: 10%;
+    } 
     .imgdescription p button{
         color: rgb(87, 87, 239);
     }
