--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -203,7 +203,14 @@
     height: 10%;
     width: 100%;
 }
-
+.imgdescription{
+    /* border: 2px solid red; */
+    color: white;
+  background: rgba(79, 70, 70, 0.399);  
+  backdrop-filter: blur(10px);
+  border-radius: 0 0 16px 16px;
+ 
+}
 .imgdescription p{
     font-size: 110%;
     text-align: left;
@@ -275,9 +282,9 @@
         border-radius: 50%;
         color: white;
         border: none;
-        font-size: 24px;
-        height: 40px;
-        width: 40px;
+        font-size: 17px;
+        height: 30px;
+        width: 30px;
         display: flex;
         box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
         align-items: center;
@@ -286,9 +293,12 @@
      }
     .imgcard{
         width: 140%;
-        height: 80% ;
+        height: 70% ;
         margin-left: 10%;
     } 
+    .imgdescription p{
+        font-size: 16px;
+    }
     .imgdescription p button{
         color: rgb(87, 87, 239);
     }
