--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -141,30 +141,31 @@
 .mainbody{
     /* border: 2px solid green; */
     /* margin-left: 22%; */
-    height: 90%;
+    height: 100%;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 .imgcard{
-    height: 100%;
-    width: 40%;
-    margin-left: 18%;
+    height: 90%;
+    width: 38%;
     border-radius: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
     transition: all 0.3s ease-in-out;
     transform: translateY(-5px);
     display: flex;
     justify-content: end;
+    /* border: 2px solid blue; */
     align-items:end;
-    /* margin-bottom: 40px; */
+    /* margin-right: 90px; */
     flex-direction: column;
 }
 .btns{
     position: absolute;
-    left: 85%;
+    left: 120%;
     bottom: 30%;
+    /* padding-left: 200%; */
     height: 300px;
     width: 5%;
     display: flex;
@@ -189,19 +190,6 @@
     transform: translateY(-50%);
     /* border: 2px solid red; */
 background-color: black;
-    
-    /* border: none;
-    color: white;
-    
-    padding: 10px 16px;
-   
-    cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.2s ease;
-    
-    position: absolute;
-    right: 20px;
-    top: 50%;
-     */
 }
 
 .btns button:hover{
@@ -217,8 +205,6 @@ background-color: black;
     /* border: 2px solid red; */
     color: white;
     width: 100%;
-    position: absolute;
-    bottom: 0%;
   background: rgba(79, 70, 70, 0.399);  
   backdrop-filter: blur(10px);
   border-radius: 0 0 16px 16px;
@@ -271,9 +257,10 @@ background-color: black;
     }
     .mainbody{
         /* border: 2px solid black; */
-        margin-top: 12%;
-        height: 98%;
+        /* margin-top: 12%; */
+        height: 100%;
         width: 100%;
+       
         display: flex;
         justify-content: center;
         gap: 5%;
@@ -281,6 +268,8 @@ background-color: black;
         /* flex-direction: column; */
     }
     .btns{
+        position: absolute;
+        left: 80%;
         height: auto;
         width: 40%;
         display: flex;
@@ -306,9 +295,10 @@ background-color: black;
         transform: translateY(-50%);
      }
     .imgcard{
-        width: 140%;
-        height: 70% ;
-        margin-left: 10%;
+        width: 100%;
+        height: 100% ;
+        /* margin-left: 10%; */
+        border-radius: 0%;
     } 
     .imgdescription p{
         font-size: 16px;
