--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -29,7 +29,7 @@
 }
 
 .content{
-    height: 100%;
+    height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -133,8 +133,9 @@
     align-items: center;
 }
 .imgcard{
-    height: 90%;
-    width: 38%;
+    height: 70vh;
+    width: 30%;
+    /* width: 440px; */
     border-radius: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
     transition: all 0.3s ease-in-out;
@@ -149,7 +150,7 @@
 .btns{
     position: absolute;
     left: 120%;
-    bottom: 30%;
+    bottom: 20%;
     /* padding-left: 200%; */
     height: 300px;
     width: 5%;
@@ -187,13 +188,17 @@ background-color: black;
     width: 100%;
 }
 .imgdescription{
-    /* border: 2px solid red; */
+    /* border: 2px solid green; */
     color: white;
     width: 100%;
   background: rgba(79, 70, 70, 0.399);  
   backdrop-filter: blur(10px);
   border-radius: 0 0 16px 16px;
  
+}
+.description_btns{
+    /* border: 2px solid red; */
+    position: sticky;
 }
 .imgdescription p{
     font-size: 110%;
@@ -257,6 +262,21 @@ background-color: black;
         width: 100%;
         /* border: 2px solid green; */
     }
+    .btns{
+        position: absolute;
+        left: 120%;
+        bottom: 30%;
+        /* padding-left: 200%; */
+        height: 300px;
+        width: 5%;
+        display: flex;
+        justify-content: space-around;
+        /* align-items: center; */
+        flex-direction: column;
+        gap: 10%;
+        /* border: 2px solid green; */
+       
+    }
     .mainbody{
         /* border: 2px solid black; */
         /* margin-top: 12%; */
@@ -302,6 +322,7 @@ background-color: black;
         /* margin-left: 10%; */
         border-radius: 0%;
     } 
+  
     .imgdescription p{
         font-size: 18px;
     }
