--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -258,7 +258,7 @@ background-color: black;
         padding: 5px  20px;
     }
     .content{
-        height: 100%;
+        height: 90vh;
         width: 100%;
         /* border: 2px solid green; */
     }
