--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -225,7 +225,9 @@ background-color: black;
 @media (max-width: 575.98px) {
 
     .body{
-        height: calc(var(--vh, 1vh) * 100);
+        /* height: calc(var(--vh, 1vh) * 100); */
+        height: calc(var(--vh) * 100);
+
         width: 100%;
         display: flex;
         transition: background-color 0.5s ease-in-out,
@@ -261,7 +263,8 @@ background-color: black;
     }
     .content{
         /* height: 85vh; */
-        height: calc(var(--vh, 1vh) * 100);
+        /* height: calc(var(--vh, 1vh) * 100); */
+        height: calc(var(--vh) * 100);
         width: 100%;
         /* border: 2px solid green; */
     }
