--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -4,7 +4,7 @@
     font-family: 'Open Sans', sans-serif;
 }
 .body{
-    height: 100vh;
+    height: 100dvh;
     width: 100%;
     display: flex;
     transition: background-color 0.5s ease-in-out,
