--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -49,7 +49,8 @@ body {
 }
 
 .content{
-    height: 100vh;
+    /* height: 100vh; */
+    height: calc(var(--vh, 1vh) * 100);
     width: 100%;
     display: flex;
     justify-content: center;
