--- a/src/CSS/newsfeed.css
+++ b/src/CSS/newsfeed.css
@@ -3,21 +3,7 @@
     padding: 0px;
     font-family: 'Open Sans', sans-serif;
 }
-/* .body{
-    height: 100dvh;
-    width: 100%;
-    display: flex;
-    transition: background-color 0.5s ease-in-out,
-     background-image 0.5s ease-in-out;
-     background-position: center;
-    flex-direction: column;
-    overflow: hidden;
-    overflow-y: hidden;
-} */
- /* html, body {
-  height: -webkit-fill-available;
-  min-height: -webkit-fill-available;
-} */
+
  html, body {
   height: -webkit-fill-available;
   min-height: -webkit-fill-available;
@@ -29,16 +15,16 @@
 body {
   margin: 0;
   padding: 0;
-  height: calc(var(--vh, 1vh) * 100); /* use JS variable */
+  height: calc(var(--vh, 1vh) * 100); 
   width: 100%;
   display: flex;
   flex-direction: column;
   background-position: center;
   overflow-x: hidden;
-  overflow-y: auto; /* allow scrolling */
+  overflow-y: auto; 
 }
 
-.body { /* keep your styles for backgroundColor from JSX */
+.body { 
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -49,21 +35,18 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    /* border: 2px solid darkgoldenrod; */
     background-color: rgba(32, 28, 28, 0.733);
     flex-direction: row;
     border-bottom: 1px solid rgb(158, 156, 156);
 }
 
 .content{
-    /* height: 100vh; */
     height: calc(var(--vh, 1vh) * 100);
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* border: 2px solid red; */
 }
 .logo{
     height: 40%;
@@ -92,20 +75,15 @@ body {
     gap: 5%;
     flex-direction: row;
     width: 80%;
-    /* flex-wrap: wrap; */
     overflow-x: auto;
     border-radius: 20px;
-    /* border: 2px solid green; */
     margin-bottom: 1%;
     margin-top: 1%;
-    /* height: auto; */
     row-gap: 10%;
     scrollbar-width: none; 
 }
 .nextlogo{
-    /* border: 2px solid red; */
-    /* height: 80%;
-    width: 2%; */
+   
     display: flex;
     align-items: center;
     margin-right: 6%;
@@ -114,9 +92,7 @@ body {
     
 }
 .prevlogo{
-    /* border: 2px solid red; */
-    /* height: 80%;
-    width: 2%; */
+    
     display: flex;
     align-items: center;
     margin-left: 4%;
@@ -128,7 +104,6 @@ body {
     color: rgb(80, 78, 78);
     padding: 5px 10px;
     border-radius: 20px;
-    /* border: 2px solid blue; */
     background: rgba(255, 255, 255, 0.1); 
     background-color: white;
     backdrop-filter: blur(10px);          
@@ -148,12 +123,10 @@ body {
     border: 1px solid red;
     width: 90%;
     border-radius: 90px;
-    /* background: #ff4141; */
     margin-left: 6%;
 }
 .mainbody{
-    /* border: 2px solid green; */
-    /* margin-left: 22%; */
+   
     height: 100%;
     width: 100%;
     display: flex;
@@ -163,31 +136,25 @@ body {
 .imgcard{
     height: 70vh;
     width: 28%;
-    /* width: 440px; */
     border-radius: 20px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2); 
     transition: all 0.3s ease-in-out;
     transform: translateY(-5px);
     display: flex;
     justify-content: end;
-    /* border: 2px solid blue; */
     align-items:end;
-    /* margin-right: 90px; */
     flex-direction: column;
 }
 .btns{
     position: absolute;
     left: 120%;
     bottom: 20%;
-    /* padding-left: 200%; */
     height: 300px;
     width: 5%;
     display: flex;
     justify-content: space-around;
-    /* align-items: center; */
     flex-direction: column;
     gap: 10%;
-    /* border: 2px solid green; */
    
 }
 .btns button{
@@ -202,7 +169,6 @@ body {
     align-items: center;
     justify-content: center;
     transform: translateY(-50%);
-    /* border: 2px solid red; */
 background-color: black;
 }
 
@@ -216,7 +182,6 @@ background-color: black;
     width: 100%;
 }
 .imgdescription{
-    /* border: 2px solid green; */
     color: white;
     width: 100%;
   background: rgba(79, 70, 70, 0.399);  
@@ -225,7 +190,6 @@ background-color: black;
  
 }
 .description_btns{
-    /* border: 2px solid red; */
     position: sticky;
 }
 .imgdescription p{
@@ -246,14 +210,12 @@ background-color: black;
     align-items: center;
     flex-direction: row;
     text-align: center;
-    /* gap: 2%; */
     text-decoration: none;
 }
 @media (max-width: 575.98px) {
 
     .body{
-        /* height: calc(var(--vh, 1vh) * 100); */
-        /* height: calc(var(--vh) * 100); */
+       
   height: calc(var(--vh, 1vh) * 100);
 
         width: 100%;
@@ -261,10 +223,7 @@ background-color: black;
         transition: background-color 0.5s ease-in-out,
          background-image 0.5s ease-in-out;
          background-position: center;
-         /* background-size: cover; */
-        /* justify-content: center;
-        align-items: center; */
-        /* border: 2px solid blue; */
+        
         flex-direction: column;
         overflow: hidden;
         overflow-y: hidden;
@@ -283,49 +242,39 @@ background-color: black;
         font-size: 90%;
         padding: 0px 20px;
         border-radius: 20px;
-        /* border: 2px solid red; */
         cursor: pointer;
         transition: all 0.3s ease-in-out;
         height: 30px;
         padding: 5px  20px;
     }
     .content{
-        /* height: 85vh; */
-        /* height: calc(var(--vh, 1vh) * 100); */
-        /* height: calc(var(--vh) * 100); */
+       
           height: calc(var(--vh, 1vh) * 100);
 
         width: 100%;
-        /* border: 2px solid green; */
     }
    
     .btns{
         position: absolute;
         left: 120%;
         bottom: 30%;
-        /* padding-left: 200%; */
         height: 300px;
         width: 5%;
         display: flex;
         justify-content: space-around;
-        /* align-items: center; */
         flex-direction: column;
         gap: 10%;
-        /* border: 2px solid green; */
        
     }
    
     .mainbody{
-        /* border: 2px solid black; */
-        /* margin-top: 12%; */
-        /* height: auto; */
+        
         width: 100%;
        
         display: flex;
         justify-content: center;
         gap: 5%;
         align-items:flex-start;
-        /* flex-direction: column; */
     }
     .btns{
         position: absolute;
@@ -337,8 +286,7 @@ background-color: black;
         margin-top: 40%;
         justify-content: space-between;
         gap: 30px;
-        /* border: 2px solid green; */
-       /* margin-left: 15%; */
+     
      }
    
      .btns button{
@@ -357,7 +305,6 @@ background-color: black;
     .imgcard{
         width: 100%;
         height: 100% ;
-        /* margin-left: 10%; */
         border-radius: 0%;
     } 
   
